--- a/js Dom practise/Clicktogenerate.html
+++ b/js Dom practise/Clicktogenerate.html
@@ -10,8 +10,8 @@
     <p id="p1">
       Hello we are here to do a simple task, plz click the button bellow
     </p>
-    <button id="click" onclick="addTextNode('hi ')">click me :)</button>
+    <button id="click" onclick="addTextNode('hi ')">click me to generate hi:)</button>
     <p id="p2">Text will be generated from here after the plus sign :)_____ +</p>
-    <script src="/js Dom practise/Clicktogenerate.js"></script>
+    <script src="/js Dom practise/removechild.js"></script>
   </body>
 </html>
