--- a/js Dom practise/shopping list/shoppinglist.html
+++ b/js Dom practise/shopping list/shoppinglist.html
@@ -27,6 +27,6 @@
 
     <ul></ul>
 
-    <script src="./shoppinglist.js"></script>
+    <script src="/shopping list/shoppinglist.js"></script>
   </body>
 </html>
