error throwing input setup

--- a/basic practise/error.html
+++ b/basic practise/error.html
@@ -9,7 +9,9 @@
 <body>
     <p>Understanding errors</p>
     <label  for="numberInput">Input:</label>
-    <input type="text" id="number"> <span style="border: 2px solid red; background-color:brown; color:white">Input here to see the custom errors</span>
+    <input type="text" id="number"> 
+    <button type="submit" id="btn">submit</button><span style="border: 2px solid red; background-color:brown; color:white">Input here to see the custom errors</span>
+    
     <script src="./errors.js"></script>
 </body>
 </html>
