custom errors made

--- a/basic practise/error.html
+++ b/basic practise/error.html
@@ -11,6 +11,7 @@
     <label  for="numberInput">Input:</label>
     <input type="text" id="number"> 
     <button type="submit" id="btn">submit</button><span style="border: 2px solid red; background-color:brown; color:white">Input here to see the custom errors</span>
+    <div class="div"></div>
     
     <script src="./errors.js"></script>
 </body>
